--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <section id="signup-form" class="mt-3">
   <div class="container">
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-sm-center">
       <div class="col-sm-8 col-xs-12">
         <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
         <hr>
@@ -18,3 +18,5 @@
     </div>
   </div>
 </section>
+
+<app-footer></app-footer>
