--- a/src/styles.css
+++ b/src/styles.css
@@ -8673,14 +8673,6 @@ button[disabled] {
   color: #dc3545;
 }
 
-.modal-content {
-  margin-top: 100px;
-}
-
-.c-modal-bg-color {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
 .sectionDescription {
   text-indent: 0px;
 }
@@ -8708,8 +8700,19 @@ button[disabled] {
     opacity: 1;
   }
 }
-.hide-it{
-  display:none;
+.hide-it {
+  display: none;
+}
+
+#contact-us {
+  border: 0px solid white !important;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+footer {
+  min-height: 100px;
+  background-color: #FBF7FD;
 }
 
 /*# sourceMappingURL=styles.css.map */
