--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,7 +1,12 @@
-<section id="terms-conditions">
-	<div class="container">
-		<div class="row">
-			<h3 class="text-success mb-3 ml-auto mr-auto">About us</h3>
+<section class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+			<h3 class="text-success mb-3 text-center">About Us</h3>
 			<ol class="text-muted">
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
@@ -16,6 +21,9 @@
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea reiciendis, corporis quibusdam animi odit accusantium culpa, architecto vitae rem, qui repudiandae eligendi nobis nulla nostrum!</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eaque inventore fugiat officiis non, facilis cupiditate sequi amet, iste fugit quae hic neque accusantium nam rerum nemo odio. Laborum, magni!</li>
 			</ol>
-		</div>
-	</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
