--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
 <app-header></app-header>
 
-<section id="signup-form" class="mt-3">
+
+
+            <router-outlet></router-outlet>
+
+
+
+<app-footer></app-footer>
+
+<!--
+  <section id="signup-form" class="mt-3">
   <div class="container">
     <div class="row justify-content-sm-center">
       <div class="col-sm-8 col-xs-12">
@@ -12,6 +21,7 @@
 
             <router-outlet></router-outlet>
 
+
           </div>
         </div>
       </div>
@@ -19,4 +29,4 @@
   </div>
 </section>
 
-<app-footer></app-footer>
+-->
