--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,80 +1,88 @@
-<section id="terms-conditions">
+<section id="signup-form" class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
 			<div class="card" id="contact-us">
 				<div class="card-header text-success text-center c-main-bg-color">
 					<h3 class="text-success">Contact us</h3>
 				</div>
 				<div class="card-body">
-						<form (ngSubmit)="onSendMessage(f)" #f="ngForm" *ngIf="!messageService.messageSuccess">
-						  	<div class="form-group col-xs-12 col-sm-12">
-						    	<label for="name">Name</label>
-						      	<input 
-						      		type="text" 
-						      		class="form-control" 
-						      		id="name"
-						      		placeholder="Enter your name" 
-						      		name="name"
-						      		ngModel
-						      		#name="ngModel"
-						      		required
-						      		minlength="2"
-						      		maxlength="50" 
-						      		[ngClass]="{ 'is-invalid': name.invalid && name.touched && !noname, 'is-valid': name.valid && name.touched }" 
-						      		>
-						      		<div *ngIf="name.invalid && name.touched && !noname" class="invalid-feedback">
-						      			<div *ngIf="name.errors.required">Please enter name name</div>
-						      			<div *ngIf="name.errors.minlength">Minimun 2 characters</div>
-						      			<div *ngIf="name.errors.maxlength">Maximum 50 cahracters</div>
-				                    </div>
-						  	</div>
-						  	<div class="form-group col-xs-12 col-sm-12">
-						    	<label for="email">Email</label>
-						      	<input 
-						      		type="email" 
-						      		class="form-control" 
-						      		id="email" 
-						      		placeholder="Enter your email address" 
-						      		name="email"
-						      		ngModel
-						      		#email="ngModel"
-						      		pattern="^[^\s@]+@[^\s@]+\.[^\s@]{2,}$"
-						      		required 
-						      		[ngClass]="{ 'is-invalid': email.invalid && email.touched && !noEmail, 'is-valid': email.valid && email.touched }" 
-						      		>
-						      		<div *ngIf="email.invalid && email.touched && !noEmail" class="invalid-feedback">
-						      			<div *ngIf="email.errors.required">Please enter email name</div>
-						      			<div *ngIf="email.errors.pattern">Please enter a valid email address</div>
-				                    </div>
-						    	
-						  	</div>
-						  	<div class="form-group col-xs-12 col-sm-12">
-						    	<label for="message">Message</label>
-						      	<textarea
-						      		rows="7"
-						      		cols="50"
-						      		class="form-control" 
-						      		id="message"
-						      		placeholder="Your message" 
-						      		name="message"
-						      		ngModel
-						      		#message="ngModel"
-						      		required
-						      		minlength="20"
-						      		maxlength="10000"
-						      		[ngClass]="{ 'is-invalid': message.invalid && message.touched, 'is-valid': message.valid && message.touched }" 
-						      		>
-						      	</textarea>
-						      	<div *ngIf="message.invalid && message.touched" class="invalid-feedback">
-					      			<div *ngIf="message.errors.required">Please enter message</div>
-					      			<div *ngIf="message.errors.minlength">Minimun 20 characters</div>
-					      			<div *ngIf="message.errors.maxlength">Maximum 1000 characters</div>
-		                    	</div>
-						  	</div>
-						  	<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-block">Send</button>
-						</form>
-						<div *ngIf="messageService.messageSuccess" class="text-center">
-							<h3>Thank you</h3>
-							<p>We have received your message. We will be in touch with you very soon.</p>
-						</div>
+					<form (ngSubmit)="onSendMessage(f)" #f="ngForm" *ngIf="!messageService.messageSuccess">
+					  	<div class="form-group col-xs-12 col-sm-12">
+					    	<label for="name">Name</label>
+					      	<input 
+					      		type="text" 
+					      		class="form-control" 
+					      		id="name"
+					      		placeholder="Enter your name" 
+					      		name="name"
+					      		ngModel
+					      		#name="ngModel"
+					      		required
+					      		minlength="2"
+					      		maxlength="50" 
+					      		[ngClass]="{ 'is-invalid': name.invalid && name.touched && !noname, 'is-valid': name.valid && name.touched }" 
+					      		>
+					      		<div *ngIf="name.invalid && name.touched && !noname" class="invalid-feedback">
+					      			<div *ngIf="name.errors.required">Please enter name name</div>
+					      			<div *ngIf="name.errors.minlength">Minimun 2 characters</div>
+					      			<div *ngIf="name.errors.maxlength">Maximum 50 cahracters</div>
+			                    </div>
+					  	</div>
+					  	<div class="form-group col-xs-12 col-sm-12">
+					    	<label for="email">Email</label>
+					      	<input 
+					      		type="email" 
+					      		class="form-control" 
+					      		id="email" 
+					      		placeholder="Enter your email address" 
+					      		name="email"
+					      		ngModel
+					      		#email="ngModel"
+					      		pattern="^[^\s@]+@[^\s@]+\.[^\s@]{2,}$"
+					      		required 
+					      		[ngClass]="{ 'is-invalid': email.invalid && email.touched && !noEmail, 'is-valid': email.valid && email.touched }" 
+					      		>
+					      		<div *ngIf="email.invalid && email.touched && !noEmail" class="invalid-feedback">
+					      			<div *ngIf="email.errors.required">Please enter email name</div>
+					      			<div *ngIf="email.errors.pattern">Please enter a valid email address</div>
+			                    </div>
+					    	
+					  	</div>
+					  	<div class="form-group col-xs-12 col-sm-12">
+					    	<label for="message">Message</label>
+					      	<textarea
+					      		rows="7"
+					      		cols="50"
+					      		class="form-control" 
+					      		id="message"
+					      		placeholder="Your message" 
+					      		name="message"
+					      		ngModel
+					      		#message="ngModel"
+					      		required
+					      		minlength="20"
+					      		maxlength="10000"
+					      		[ngClass]="{ 'is-invalid': message.invalid && message.touched, 'is-valid': message.valid && message.touched }" 
+					      		>
+					      	</textarea>
+					      	<div *ngIf="message.invalid && message.touched" class="invalid-feedback">
+				      			<div *ngIf="message.errors.required">Please enter message</div>
+				      			<div *ngIf="message.errors.minlength">Minimun 20 characters</div>
+				      			<div *ngIf="message.errors.maxlength">Maximum 1000 characters</div>
+	                    	</div>
+					  	</div>
+					  	<button type="submit" [disabled]="f.invalid" class="btn btn-outline-success btn-block">Send</button>
+					</form>
+					<div *ngIf="messageService.messageSuccess" class="text-center">
+						<h3>Thank you</h3>
+						<p>We have received your message. We will be in touch with you very soon.</p>
+					</div>
 				</div>
 				<div class="card-footer text-muted text-center">
 					<p>John Citizen</p>
@@ -82,4 +90,12 @@
 					<p>mobile: 98XXXXXXXXX</p>
 				</div>
 			</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
+
+			
