--- a/src/app/dropout-reason/dropout-reason.component.html
+++ b/src/app/dropout-reason/dropout-reason.component.html
@@ -1,114 +1,125 @@
-<p class="lead text-center">Why coun't you complete the course ?</p>
-<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
-	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
-</div>
-<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
-	<p>Please select one</p>
-</div>
-<form #f="ngForm">
-	<div class="row mt-4">
-		<div class="col-xs-12 custom-control custom-radio">
-      		<input 
-      			id="group-1" 
-      			type="radio" 
-      			class="custom-control-input" 
-      			value="Couldn't pass" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required 
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-1">Couldn't pass</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-      		<input 
-      			id="group-2" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Financial difficulty" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-2">Financial difficulty</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
-      		<input 
-      			id="group-3" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Foreign Employment" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-3">Foreign employment</label>
-      	</div>
+<section class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+            <p class="lead text-center">Why coun't you complete the course ?</p>
+            <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">  
+                  <p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+            </div>
+            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">   
+                  <p>Please select one</p>
+            </div>
+            <form #f="ngForm">
+                  <div class="row mt-4">
+                        <div class="col-xs-12 custom-control custom-radio">
+                              <input 
+                                    id="group-1" 
+                                    type="radio" 
+                                    class="custom-control-input" 
+                                    value="Couldn't pass" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required 
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-1">Couldn't pass</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                              <input 
+                                    id="group-2" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Financial difficulty" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-2">Financial difficulty</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
+                              <input 
+                                    id="group-3" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Foreign Employment" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-3">Foreign employment</label>
+                        </div>
 
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
-      		<input 
-      			id="group-4" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Foreign Study" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-4">Foreign study</label>
-      	</div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
+                              <input 
+                                    id="group-4" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Foreign Study" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-4">Foreign study</label>
+                        </div>
 
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
-      		<input 
-      			id="group-5" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Migration" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-5">Migration / Moved to other place</label>
-      	</div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
+                              <input 
+                                    id="group-5" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Migration" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-5">Migration / Moved to other place</label>
+                        </div>
 
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
-      		<input 
-      			id="group-6" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Moved to other college" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-6">Moved to other college</label>
-      	</div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
+                              <input 
+                                    id="group-6" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Moved to other college" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-6">Moved to other college</label>
+                        </div>
 
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
-      		<input 
-      			id="group-6" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Other reason" 
-      			name="dropoutReason" 
-      			[(ngModel)]="surveyService.dropoutReason"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-6">Other</label>
-      	</div>
- 	</div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
+                              <input 
+                                    id="group-6" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Other reason" 
+                                    name="dropoutReason" 
+                                    [(ngModel)]="surveyService.dropoutReason"
+                                    required
+                                    >
+                              <label class="custom-control-label pl-2 ml-3" for="group-6">Other</label>
+                        </div>
+                  </div>
 
- 	<hr>
+                  <hr>
 
-	<div class="row text-center">
-		<div class="col xs-6">
-			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
-		</div>
-		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
-		</div>
-	</div>
-</form>
-
-
-					
-					
+                  <div class="row text-center">
+                        <div class="col xs-6">
+                              <button class="btn btn-outline-success" (click)="goBack()">Back</button>
+                        </div>
+                        <div class="col xs-6">
+                              <button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
+                        </div>
+                  </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>				
