--- a/src/app/gender/gender.component.html
+++ b/src/app/gender/gender.component.html
@@ -1,59 +1,73 @@
-<p class="lead text-center">Your gender ?</p>
-<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
-	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
-</div>
-<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
-	<p>Please select one</p>
-</div>
-<form #f="ngForm">
-	<div class="row text-center mt-4">
-		<div class="col custom-control custom-radio">
-      		<input 
-      			id="genderMale" 
-      			type="radio" 
-      			class="custom-control-input" 
-      			value="Male" 
-      			name="gender" 
-      			[(ngModel)]="surveyService.gender"
-      			required 
-	      		>
-      		<label class="custom-control-label" for="genderMale">Male</label>
-      	</div>
-      	<div class="col custom-control custom-radio">
-      		<input 
-      			id="genderFemale" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Female" 
-      			name="gender" 
-      			[(ngModel)]="surveyService.gender"
-      			required
-	      		>
-      		<label class="custom-control-label" for="genderFemale">Female</label>
-      	</div>
-      	<div class="col custom-control custom-radio">
-      		<input 
-      			id="genderOther" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Other" 
-      			name="gender" 
-      			[(ngModel)]="surveyService.gender"
-      			required
-	      		>
-      		<label class="custom-control-label" for="genderOther">Other</label>
-      	</div>
- 	</div>
+<section class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+            <p class="lead text-center">Your gender ?</p>
+            <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">  
+                  <p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+            </div>
+            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">   
+                  <p>Please select one</p>
+            </div>
+            <form #f="ngForm">
+                  <div class="row text-center mt-4">
+                        <div class="col custom-control custom-radio">
+                              <input 
+                                    id="genderMale" 
+                                    type="radio" 
+                                    class="custom-control-input" 
+                                    value="Male" 
+                                    name="gender" 
+                                    [(ngModel)]="surveyService.gender"
+                                    required 
+                                    >
+                              <label class="custom-control-label" for="genderMale">Male</label>
+                        </div>
+                        <div class="col custom-control custom-radio">
+                              <input 
+                                    id="genderFemale" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Female" 
+                                    name="gender" 
+                                    [(ngModel)]="surveyService.gender"
+                                    required
+                                    >
+                              <label class="custom-control-label" for="genderFemale">Female</label>
+                        </div>
+                        <div class="col custom-control custom-radio">
+                              <input 
+                                    id="genderOther" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Other" 
+                                    name="gender" 
+                                    [(ngModel)]="surveyService.gender"
+                                    required
+                                    >
+                              <label class="custom-control-label" for="genderOther">Other</label>
+                        </div>
+                  </div>
 
-	<hr>
+                  <hr>
 
-	<div class="row text-center">
-		<div class="col xs-6">
-			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
-		</div>
-		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success">Next</button>
-		</div>
-	</div>
-</form>
-
+                  <div class="row text-center">
+                        <div class="col xs-6">
+                              <button class="btn btn-outline-success" (click)="goBack()">Back</button>
+                        </div>
+                        <div class="col xs-6">
+                              <button type="submit" (click)="onSubmit()"  class="btn btn-outline-success">Next</button>
+                        </div>
+                  </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
