--- a/src/app/overseas-purpose/overseas-purpose.component.html
+++ b/src/app/overseas-purpose/overseas-purpose.component.html
@@ -1,63 +1,77 @@
-<p class="lead text-center">What is your purpose of living overseas ?</p>
-<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
-	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
-</div>
-<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
-	<p>Please select one</p>
-</div>
-<form #f="ngForm">
-	<div class="row mt-4">
-		<div class="col-xs-12 custom-control custom-radio">
-      		<input 
-      			id="work" 
-      			type="radio" 
-      			class="custom-control-input" 
-      			value="Work" 
-      			name="overseasPurpose" 
-      			[(ngModel)]="surveyService.overseasPurpose"
-      			#work="ngModel"
-      			required 
-	      		>
-      		<label class="custom-control-label" for="work">Work</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-      		<input 
-      			id="ia" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Study" 
-      			name="overseasPurpose"
-      			#study="ngModel" 
-      			[(ngModel)]="surveyService.overseasPurpose"
-      			required
-	      		>
-      		<label class="custom-control-label" for="ia">Study</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-      		<input 
-      			id="ied" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="NRN" 
-      			name="overseasPurpose" 
-      			[(ngModel)]="surveyService.overseasPurpose"
-      			#nrm="ngModel"
-      			required
-	      		>
-      		<label class="custom-control-label" for="ied">I live permanently</label>
-      	</div>
-      	
- 	</div>
+<section id="signup-form" class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+            <p class="lead text-center">What is your purpose of living overseas ?</p>
+            <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">  
+                  <p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+            </div>
+            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">   
+                  <p>Please select one</p>
+            </div>
+            <form #f="ngForm">
+                  <div class="row mt-4">
+                        <div class="col-xs-12 custom-control custom-radio">
+                              <input 
+                                    id="work" 
+                                    type="radio" 
+                                    class="custom-control-input" 
+                                    value="Work" 
+                                    name="overseasPurpose" 
+                                    [(ngModel)]="surveyService.overseasPurpose"
+                                    #work="ngModel"
+                                    required 
+                                    >
+                              <label class="custom-control-label" for="work">Work</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                              <input 
+                                    id="ia" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="Study" 
+                                    name="overseasPurpose"
+                                    #study="ngModel" 
+                                    [(ngModel)]="surveyService.overseasPurpose"
+                                    required
+                                    >
+                              <label class="custom-control-label" for="ia">Study</label>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                              <input 
+                                    id="ied" 
+                                    type="radio" 
+                                    class="btn btn-outline-primary custom-control-input" 
+                                    value="NRN" 
+                                    name="overseasPurpose" 
+                                    [(ngModel)]="surveyService.overseasPurpose"
+                                    #nrm="ngModel"
+                                    required
+                                    >
+                              <label class="custom-control-label" for="ied">I live permanently</label>
+                        </div>
+                        
+                  </div>
 
-	<hr>
-	
-	<div class="row text-center">
-		<div class="col xs-6">
-			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
-		</div>
-		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()"  class="btn btn-outline-success">Next</button>
-		</div>
-	</div>
-</form>
-					
+                  <hr>
+                  
+                  <div class="row text-center">
+                        <div class="col xs-6">
+                              <button class="btn btn-outline-success" (click)="goBack()">Back</button>
+                        </div>
+                        <div class="col xs-6">
+                              <button type="submit" (click)="onSubmit()"  class="btn btn-outline-success">Next</button>
+                        </div>
+                  </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
