--- a/src/app/year-joined/year-joined.component.html
+++ b/src/app/year-joined/year-joined.component.html
@@ -1,46 +1,61 @@
-<p class="lead text-center">When did you join DJMC ?</p>
-<div class="row text-muted small justify-content-center" *ngIf="isInvalid">	
-	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please fill up the following detail <span *ngIf="isInvalid">to proceed</span></p>
-</div>
-<div class="row text-muted small justify-content-center" *ngIf="!isInvalid">	
-	<p>Please fill up the following detail</p>
-</div>
-<div class="row small justify-content-center text-danger" *ngIf="invalidDate">	
-	<p>Please choose between 2046 to 2075</p>
-</div>
-<form #f="ngForm">
-	<div>
-		<div class="row"> 
-	    </div>
-
-	    <div class="form-group">
-	      	<label for="year">Year</label>
-	      	<input 
-	      		type="number" 
-		      	class="form-control" 
-		      	id="year" 
-		      	placeholder="2054" 
-		      	name="year"
-		      	[(ngModel)]="surveyService.year"
-		      	#year="ngModel"
-		      	required
-		      	pattern="(^[2][0][4-7][0-9]$)"		
-	      		[ngClass]="{ 'is-invalid': year.value > 2075 || year.value < 2045 && year.touched, 'is-valid': year.valid && year.touched }" 
-	      		>
-	      		<div *ngIf="year.invalid && year.touched" class="invalid-feedback">
-                    <div *ngIf="year.errors.required">Please enter year of competion</div>
-                </div>
-	    </div>
-	    
-		    <hr>
-
-	    <div class="row text-center">
-			<div class="col xs-6">
-				<button class="btn btn-outline-success" (click)="goBack()">Back</button>
+<section id="signup-form" class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+			<p class="lead text-center">When did you join DJMC ?</p>
+			<div class="row text-muted small justify-content-center" *ngIf="isInvalid">	
+				<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please fill up the following detail <span *ngIf="isInvalid">to proceed</span></p>
 			</div>
-			<div class="col xs-6">
-				<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
+			<div class="row text-muted small justify-content-center" *ngIf="!isInvalid">	
+				<p>Please fill up the following detail</p>
 			</div>
-		</div>
+			<div class="row small justify-content-center text-danger" *ngIf="invalidDate">	
+				<p>Please choose between 2046 to 2075</p>
+			</div>
+			<form #f="ngForm">
+				<div>
+					<div class="row"> 
+				    </div>
+
+				    <div class="form-group">
+				      	<label for="year">Year</label>
+				      	<input 
+				      		type="number" 
+					      	class="form-control" 
+					      	id="year" 
+					      	placeholder="2054" 
+					      	name="year"
+					      	[(ngModel)]="surveyService.year"
+					      	#year="ngModel"
+					      	required
+					      	pattern="(^[2][0][4-7][0-9]$)"		
+				      		[ngClass]="{ 'is-invalid': year.value > 2075 || year.value < 2045 && year.touched, 'is-valid': year.valid && year.touched }" 
+				      		>
+				      		<div *ngIf="year.invalid && year.touched" class="invalid-feedback">
+			                    <div *ngIf="year.errors.required">Please enter year of competion</div>
+			                </div>
+				    </div>
+				    
+					    <hr>
+
+				    <div class="row text-center">
+						<div class="col xs-6">
+							<button class="btn btn-outline-success" (click)="goBack()">Back</button>
+						</div>
+						<div class="col xs-6">
+							<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
+						</div>
+					</div>
+			    </div>
+			</form>
+          </div>
+        </div>
+      </div>
     </div>
-</form>
+  </div>
+</section>
