Survey service component finalised and all the data are stored in google firebase datababse successfully.

--- a/src/app/admin/message/message.component.html
+++ b/src/app/admin/message/message.component.html
@@ -7,13 +7,16 @@
 	    <h5 class="card-title"></h5>
 		-->
     	<p class="card-text">{{message.message}}</p>
+    	<!--
     	<button (click)="composeMessage()" class="btn btn-outline-success">Reply</button>
+    	-->
   	</div>
   	<div class="card-footer text-muted">
     	{{message.email}}
   	</div>
+  	<!--
   	<div class="mx-3 mt-3 text-success" *ngIf="openMessageBox">
-		<form>
+		<form (ngSubmit)="sendMessage(f)" #f="ngForm">
 			<div class="form-group">
 			    <label for="message">Your message</label>
 			    <textarea 
@@ -23,15 +26,15 @@
 			    	placeholder="Write your message here" 
 			    	></textarea>
 			    	<div class="row">
-			    		<div class="col-xs-8 col-sm-8">
-			    			<button class="btn btn-outline-success btn-block my-4">Send</button>
-			    		</div>
-			    		<div class="col-xs-4 col-sm-4">
-			    			<button (click)="cancelComposeMessage()" class="btn btn-outline-danger btn-block my-4">Cancel</button>
-			    		</div>
-			    	</div>
-			    
+	    		<div class="col-xs-8 col-sm-8">
+	    			<button type="submit" class="btn btn-outline-success btn-block my-4">Send</button>
+	    		</div>
+	    		<div class="col-xs-4 col-sm-4">
+	    			<button (click)="cancelComposeMessage()" class="btn btn-outline-danger btn-block my-4">Cancel</button>
+	    		</div>
+		    	</div>
 		  	</div>
 		</form>
 	</div>
+-->
 </div>
