--- a/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
+++ b/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
@@ -27,7 +27,7 @@
       			class="btn btn-outline-primary custom-control-input" 
       			value="2-3 years" 
       			name="feFurtherStay" 
-      			[(ngModel)]="surveyService.usinessInheritance"
+      			[(ngModel)]="surveyService.feFurtherStay"
       			#retail="ngModel"
       			required
 	      		>
