--- a/src/app/employement-status/employement-status.component.html
+++ b/src/app/employement-status/employement-status.component.html
@@ -1,118 +1,133 @@
-<p class="lead text-center">Occupation (पेशा व्यवसाय) ?</p>
-<div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
-	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
-</div>
-<div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
-	<p>Please select one</p>
-</div>
-<form #f="ngForm">
-	<div class="row mt-4">
-		<div class="col-xs-12 custom-control custom-radio">
-      		<input 
-      			id="employee" 
-      			type="radio" 
-      			class="custom-control-input" 
-      			value="Job" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required 
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="employee">Job</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
-      		<input 
-      			id="business" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Business" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="business">Business</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
-      		<input 
-      			id="study" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Study" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="study">Study</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
-      		<input 
-      			id="agriculture" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Agriculture" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="agriculture">Agriculture</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location != 'Overseas'">
-      		<input 
-      			id="foreignemployment" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Foreign Employment" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="foreignemployment">Foreign Employment</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.gender == 'Female' && surveyService.location=='Nepal'">
-      		<input 
-      			id="housewife" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Housewife" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="housewife">Housewife</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
-      		<input 
-      			id="unemployed" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Unemployed" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="unemployed">Unemployed</label>
-      	</div>
-      	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
-      		<input 
-      			id="retired" 
-      			type="radio" 
-      			class="btn btn-outline-primary custom-control-input" 
-      			value="Retired" 
-      			name="employmentStatus" 
-      			[(ngModel)]="surveyService.employmentStatus"
-      			required
-	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="retired">Retired</label>
-      	</div>
- 	</div>
+<section class="mt-3">
+  <div class="container">
+    <div class="row justify-content-sm-center">
+      <div class="col-sm-8 col-xs-12">
+        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <hr>
+        <p class="text-muted text-center">Please fill up the following form.</p>
+        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
+          <div class="card-body text-success">
+            <p class="lead text-center">Occupation (पेशा व्यवसाय) ?</p>
+            <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">	
+            	<p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+            </div>
+            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">	
+            	<p>Please select one</p>
+            </div>
+                  <form #f="ngForm">
+                  	<div class="row mt-4">
+                  		<div class="col-xs-12 custom-control custom-radio">
+                        		<input 
+                        			id="employee" 
+                        			type="radio" 
+                        			class="custom-control-input" 
+                        			value="Job" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required 
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="employee">Job</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
+                        		<input 
+                        			id="business" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Business" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="business">Business</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
+                        		<input 
+                        			id="study" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Study" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="study">Study</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
+                        		<input 
+                        			id="agriculture" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Agriculture" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="agriculture">Agriculture</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location != 'Overseas'">
+                        		<input 
+                        			id="foreignemployment" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Foreign Employment" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="foreignemployment">Foreign Employment</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.gender == 'Female' && surveyService.location=='Nepal'">
+                        		<input 
+                        			id="housewife" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Housewife" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="housewife">Housewife</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
+                        		<input 
+                        			id="unemployed" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Unemployed" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="unemployed">Unemployed</label>
+                        	</div>
+                        	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" *ngIf="surveyService.location=='Nepal'">
+                        		<input 
+                        			id="retired" 
+                        			type="radio" 
+                        			class="btn btn-outline-primary custom-control-input" 
+                        			value="Retired" 
+                        			name="employmentStatus" 
+                        			[(ngModel)]="surveyService.employmentStatus"
+                        			required
+                  	      		>
+                        		<label class="custom-control-label pl-2 ml-3" for="retired">Retired</label>
+                        	</div>
+                   	</div>
 
- 	<hr>
+                   	<hr>
 
-	<div class="row text-center">
-		<div class="col xs-6">
-			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
-		</div>
-		<div class="col xs-6">
-			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
-		</div>
-	</div>
-</form>
+                  	<div class="row text-center">
+                  		<div class="col xs-6">
+                  			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
+                  		</div>
+                  		<div class="col xs-6">
+                  			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
+                  		</div>
+                  	</div>
+                  </form>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
