small bug with id name mismatch in forms fixed

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -7,6 +7,7 @@
         <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
           <div class="card-body text-success">
 			<h3 class="text-success mb-3 text-center">About Us</h3>
+			<h4 class="text-info text-center">( हाम्रो बारेमा )</h4>
 			<ol class="text-muted">
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore suscipit expedita tenetur officiis? Officiis, assumenda?</li>
 				<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, sint aliquid eligendi nemo enim dolorem necessitatibus harum! Hic, esse, vero.</li>
