--- a/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
+++ b/src/app/status/foreign-employment/fe-overtime/fe-overtime.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">Do you work overtime ?</p>
+<p class="small text-info text-center mb-1">( ओभरटाइम काम गर्नुहुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
