--- a/src/app/status/job/job-income/job-income.component.html
+++ b/src/app/status/job/job-income/job-income.component.html
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.jobIncome"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="business">15-20 Thousands</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">15-20 Thousands</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
