--- a/src/app/status/job/job-organisation/job-organisation.component.html
+++ b/src/app/status/job/job-organisation/job-organisation.component.html
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.organisationType"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="business">Private</label>
+      		<label class="custom-control-label pl-2 ml-3" for="private">Private</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
