--- a/src/app/status/job/job-other-activities/job-other-activities.component.html
+++ b/src/app/status/job/job-other-activities/job-other-activities.component.html
@@ -29,7 +29,7 @@
       			[(ngModel)]="surveyService.jobOtherActivites"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="business">Involved in social organisation. i.e. club</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">Involved in social organisation. i.e. club</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
