--- a/src/app/dropout-reason/dropout-reason.component.html
+++ b/src/app/dropout-reason/dropout-reason.component.html
@@ -7,7 +7,7 @@
         <div class="card c-main-bg-color border-info">
           <div class="card-body pt-1 text-success">
             <p class="lead text-info text-center mb-1">Why didn't you complete the course ?</p>
-            <p class="small text-info text-center mb-1">( कोर्ष किन सक्नु भएन ? )</p>
+            <p class="small text-info text-center mb-1">( कोर्ष किन पुरागर्न सक्नुभएन ? )</p>
             <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
                   <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
             </div>
@@ -94,7 +94,7 @@
 
                         <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
                               <input 
-                                    id="group-6" 
+                                    id="group-7" 
                                     type="radio" 
                                     class="btn btn-outline-primary custom-control-input" 
                                     value="Other reason" 
@@ -102,7 +102,7 @@
                                     [(ngModel)]="surveyService.dropoutReason"
                                     required
                                     >
-                              <label class="custom-control-label pl-2 ml-3" for="group-6">Other</label>
+                              <label class="custom-control-label pl-2 ml-3" for="group-7">Other</label>
                         </div>
                   </div>
 
