--- a/src/app/employement-status/employement-status.component.html
+++ b/src/app/employement-status/employement-status.component.html
@@ -7,7 +7,7 @@
         <div class="card c-main-bg-color border-info">
           <div class="card-body pt-1 text-success">
             <p class="lead text-info text-center mb-1">Your occupation / profession ?</p>
-            <p class="text-info text-center small mb-1">( तपाइको पेशा / व्यवसाय के हो ? ? )</p>
+            <p class="text-info text-center small mb-1">( तपाइको पेशा / व्यवसाय के हो ? )</p>
             <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
                   <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
             </div>
