--- a/src/app/status/foreign-employment/fe-duration/fe-duration.component.html
+++ b/src/app/status/foreign-employment/fe-duration/fe-duration.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">How long have you been working ?</p>
+<p class="small text-info text-center mb-1">( बिदेशमा काम गर्नु भएको कति बर्ष भयो ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
