--- a/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
+++ b/src/app/status/foreign-employment/fe-furtherstay/fe-furtherstay.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">When do you intend to go back to Nepal permanently ?</p>
+<p class="small text-info text-center mb-1">( बिदेशमा काम नगरी स्थायी रुपमा कहिले नेपाल फर्कनुहुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -31,7 +32,7 @@
       			#retail="ngModel"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-2">2-3</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">2-3 years</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2" >
       		<input 
