--- a/src/app/status/foreign-employment/fe-workdays-number/fe-workdays-number.component.html
+++ b/src/app/status/foreign-employment/fe-workdays-number/fe-workdays-number.component.html
@@ -1,4 +1,5 @@
 <p class="lead text-info text-center mb-1">How many days do you work in a week ?</p>
+<p class="small text-info text-center mb-1">( हप्तामा कति दिन काम गर्नुहुन्छ ? )</p>
 <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
       <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
 </div>
@@ -17,7 +18,7 @@
       			[(ngModel)]="surveyService.feWorkDayNumber"
       			required 
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-1">4 days a week</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-1">4 days</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -29,7 +30,7 @@
       			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-2">5 days a week</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-2">5 days</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -41,7 +42,7 @@
       			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="3-5-years">6 days a week</label>
+      		<label class="custom-control-label pl-2 ml-3" for="3-5-years">6 days</label>
       	</div>
       	<div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
       		<input 
@@ -53,7 +54,7 @@
       			[(ngModel)]="surveyService.feWorkDayNumber"
       			required
 	      		>
-      		<label class="custom-control-label pl-2 ml-3" for="group-3">7 days a week</label>
+      		<label class="custom-control-label pl-2 ml-3" for="group-3">7 days</label>
       	</div>
       	
  	</div>
