--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -8,7 +8,8 @@
         <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
           <div class="card-body text-success">
 			<div class="card-header text-success text-center c-main-bg-color">
-				<h3 class="text-success">Thank you (धन्यबाद)</h3>
+				<h3 class="text-success">Thank you</h3>
+				<h4 class="text-success">(धन्यबाद)</h4>
 			</div>
 			<div class="card-body text-center">
 				<p class="card-text">Thank you for your interest and valuable time to participate in this survey. If you want to know more about this survey and Employment Cell of DJMC, please contact us.</p>
