Highest education level chart added in Admin Section

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -37,9 +37,9 @@
 			</div>
 		</div>
 
-		<div class="row" *ngIf="pieChart">
+		<div class="row">
 			<div class="col-xs-12 col-sm-12">
-				<h4 class="text-success text-center">Reason of not completing course</h4>
+				<h4 class="text-success text-center mb-3">Reason of not completing course</h4>
 				
 				<!--
 				<ngx-charts-pie-chart
@@ -57,77 +57,165 @@
 				-->
 				
 				<ngx-charts-pie-chart
+				  [view]="view"
 			      [scheme]="colorScheme"
 			      [results]="dropoutData"
 			      [explodeSlices]="explodeSlices"
 			      [labels]="showLabels"
 			      [doughnut]="doughnut"
 			      [maxLabelLength]=40
+			      [legendTitle]="legendTitleDropout"
+				  [legend]="showLegend"
+			      *ngIf="pieChart"
+			      class="d-flex justify-content-center"
 			      >
 			    </ngx-charts-pie-chart>
+
+			    <ngx-charts-bar-vertical
+				  [view]="view"
+				  [scheme]="colorScheme"
+				  [results]="dropoutData"
+				  [gradient]="gradient"
+				  [xAxis]="showXAxis"
+				  [yAxis]="showYAxis"
+				  [legendTitle]="legendTitleDropout"
+				  [legend]="showLegend"
+				  [showXAxisLabel]="showXAxisLabel"
+				  [showYAxisLabel]="showYAxisLabel"
+				  [xAxisLabel]="xAxisLabelDropout"
+				  [yAxisLabel]="yAxisLabelDropout"
+				  class="d-flex justify-content-center"
+				  *ngIf="barChart"
+				  >
+				</ngx-charts-bar-vertical>
 				
 			</div>
 		</div>
 		<hr>
 
-		<div class="row" *ngIf="pieChart">
+		<div class="row">
 			<div class="col-xs-12 col-sm-12">
-				<h4 class="text-success text-center">Where Ex-students are living now</h4>
+				<h4 class="text-success text-center mb-3">Where Ex-students are living now</h4>
 				
 				<ngx-charts-pie-chart
+				  [view]="view"
 			      [scheme]="colorScheme"
 			      [results]="respondantLocation"
 			      [explodeSlices]="explodeSlices"
 			      [labels]="showLabels"
 			      [doughnut]="doughnut"
 			      [maxLabelLength]=40
+			      [legendTitle]="legendTitleLocation"
+				  [legend]="showLegend"
+			      *ngIf="pieChart"
+			      class="d-flex justify-content-center"
 			      >
 			    </ngx-charts-pie-chart>
+		
+			    <ngx-charts-bar-vertical
+				  [view]="view"
+				  [scheme]="colorScheme"
+				  [results]="respondantLocation"
+				  [gradient]="gradient"
+				  [xAxis]="showXAxis"
+				  [yAxis]="showYAxis"
+				  [legendTitle]="legendTitleLocation"
+				  [legend]="showLegend"
+				  [showXAxisLabel]="showXAxisLabel"
+				  [showYAxisLabel]="showYAxisLabel"
+				  [xAxisLabel]="xAxisLabelLocation"
+				  [yAxisLabel]="yAxisLabelLocation"
+				  class="d-flex justify-content-center"
+				  *ngIf="barChart"
+				  >
+				</ngx-charts-bar-vertical>
 				
 			</div>
 		</div>
 		<hr>
 
-		<div class="row" *ngIf="pieChart">
+		<div class="row">
 			<div class="col-xs-12 col-sm-12">
-				<h4 class="text-success text-center">Employment situation</h4>
+				<h4 class="text-success text-center mb-3">Employment situation</h4>
 				
 				<ngx-charts-pie-chart
+				  [view]="view"
 			      [scheme]="colorScheme"
 			      [results]="jobSituation"
 			      [explodeSlices]="explodeSlices"
 			      [labels]="showLabels"
 			      [doughnut]="doughnut"
 			      [maxLabelLength]=40
+			      [legendTitle]="legendTitleEmployment"
+				  [legend]="showLegend"
+			      *ngIf="pieChart"
+			      class="d-flex justify-content-center"
 			      >
 			    </ngx-charts-pie-chart>
-				
-			</div>
-		</div>
-		
-		<hr>
-		<div class="row" *ngIf="barChart">
-			<div class="col-xs-12 col-sm-12">
-				<h4 class="text-success text-center">Employment situation</h4>
-				
-				<ngx-charts-bar-vertical
+
+			    <ngx-charts-bar-vertical
 				  [view]="view"
 				  [scheme]="colorScheme"
 				  [results]="jobSituation"
 				  [gradient]="gradient"
 				  [xAxis]="showXAxis"
 				  [yAxis]="showYAxis"
-				  [legendTitle]="legendTitle"
+				  [legendTitle]="legendTitleEmployment"
 				  [legend]="showLegend"
 				  [showXAxisLabel]="showXAxisLabel"
 				  [showYAxisLabel]="showYAxisLabel"
-				  [xAxisLabel]="xAxisLabel"
-				  [yAxisLabel]="yAxisLabel"
-				  (select)="onSelect($event)">
+				  [xAxisLabel]="xAxisLabelEmployment"
+				  [yAxisLabel]="yAxisLabelEmployment"
+				  class="d-flex justify-content-center"
+				  *ngIf="barChart"
+				  >
 				</ngx-charts-bar-vertical>
 				
 			</div>
 		</div>
+
+		<hr>
+		<div class="row">
+			<div class="col-xs-12 col-sm-12">
+				<h4 class="text-success text-center mb-3">Highest Education Level</h4>
+				
+				<ngx-charts-pie-chart
+				  [view]="view"
+			      [scheme]="colorScheme"
+			      [results]="highestEducationLevel"
+			      [explodeSlices]="explodeSlices"
+			      [labels]="showLabels"
+			      [doughnut]="doughnut"
+			      [maxLabelLength]=40
+			      [legendTitle]="legendTitleHeducation"
+				  [legend]="showLegend"
+			      *ngIf="pieChart"
+			      class="d-flex justify-content-center"
+			      >
+			    </ngx-charts-pie-chart>
+
+			    <ngx-charts-bar-vertical
+				  [view]="view"
+				  [scheme]="colorScheme"
+				  [results]="highestEducationLevel"
+				  [gradient]="gradient"
+				  [xAxis]="showXAxis"
+				  [yAxis]="showYAxis"
+				  [legendTitle]="legendTitleHeducation"
+				  [legend]="showLegend"
+				  [showXAxisLabel]="showXAxisLabel"
+				  [showYAxisLabel]="showYAxisLabel"
+				  [xAxisLabel]="xAxisLabelHeducation"
+				  [yAxisLabel]="yAxisLabelHeducation"
+				  class="d-flex justify-content-center"
+				  *ngIf="barChart"
+				  >
+				</ngx-charts-bar-vertical>
+				
+			</div>
+		</div>
+		
+		
 	</div>
 	
 </section>
