--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -105,4 +105,10 @@ footer{
 	background-color:$navBgColor
 }
 
+.ngx-charts{
+	margin-left:auto;
+	margin-right:auto;
+	float:none !important;
+}
+
 
