--- a/src/app/status/job/future-job-change/future-job-change.component.html
+++ b/src/app/status/job/future-job-change/future-job-change.component.html
@@ -47,7 +47,7 @@
 
 	<div class="row text-center">
 		<div class="col xs-6">
-			<button class="btn btn-outline-successl" (click)="goBack()">Back</button>
+			<button class="btn btn-outline-success" (click)="goBack()">Back</button>
 		</div>
 		<div class="col xs-6">
 			<button type="submit" (click)="onSubmit()" class="btn btn-outline-success">Next</button>
