--- a/src/app/status/job/job-income/job-income.component.html
+++ b/src/app/status/job/job-income/job-income.component.html
@@ -48,7 +48,7 @@
       			id="group-4" 
       			type="radio" 
       			class="btn btn-outline-primary custom-control-input" 
-      			value="P25-35 Thousands" 
+      			value="25-35 Thousands" 
       			name="jobIncome" 
       			[(ngModel)]="surveyService.jobIncome"
       			required
