--- a/src/app/overseas-purpose/overseas-purpose.component.html
+++ b/src/app/overseas-purpose/overseas-purpose.component.html
@@ -1,18 +1,18 @@
-<section id="signup-form" class="mt-3">
+<section>
   <div class="container">
-    <div class="row justify-content-sm-center">
+    <div class="row justify-content-center">
       <div class="col-sm-8 col-xs-12">
-        <h4 class="text-success font-weight-normal text-center">Employment Survey</h4>
+        <h6 class="text-success text-center">Employment Survey</h6>
         <hr>
-        <p class="text-muted text-center">Please fill up the following form.</p>
-        <div class="card p-2 pt-0 mt-4 c-main-bg-color border-success">
-          <div class="card-body text-success">
-            <p class="lead text-center">What is your purpose of living overseas ?</p>
-            <div class="row text-muted small justify-content-center" *ngIf="isInvalid && f.invalid">  
-                  <p  [ngClass]="{'text-danger font-weight-normal border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
+        <div class="card c-main-bg-color border-info">
+          <div class="card-body pt-1 text-success">
+            <p class="lead text-info text-center mb-1">Your purpose of living overseas ?</p>
+            <p class="text-info text-center small mb-1">( बिदेशमा के कारणले बस्नु भएको हो ? )</p>
+            <div class="row justify-content-center" *ngIf="isInvalid && f.invalid">  
+                  <p [ngClass]="{'text-danger small border border-danger rounded p-2 guide blink': isInvalid}">Please select one <span *ngIf="isInvalid">to proceed</span></p>
             </div>
-            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">   
-                  <p>Please select one</p>
+            <div class="row text-muted small justify-content-center" *ngIf="!isInvalid || f.valid">
+            <p class="mb-1">Please select one</p>
             </div>
             <form #f="ngForm">
                   <div class="row mt-4">
@@ -27,7 +27,7 @@
                                     #work="ngModel"
                                     required 
                                     >
-                              <label class="custom-control-label" for="work">Work</label>
+                              <label class="custom-control-label pl-2 ml-3" for="work">Work</label>
                         </div>
                         <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
                               <input 
@@ -40,7 +40,7 @@
                                     [(ngModel)]="surveyService.overseasPurpose"
                                     required
                                     >
-                              <label class="custom-control-label" for="ia">Study</label>
+                              <label class="custom-control-label pl-2 ml-3" for="ia">Study</label>
                         </div>
                         <div class="col-xs-12 col-sm-12 custom-control custom-radio mt-2">
                               <input 
@@ -53,7 +53,7 @@
                                     #nrm="ngModel"
                                     required
                                     >
-                              <label class="custom-control-label" for="ied">I live permanently</label>
+                              <label class="custom-control-label pl-2 ml-3" for="ied">I live permanently</label>
                         </div>
                         
                   </div>
